--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.6.2",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
